added buttons to next pages, fixed doc names

--- a/case_study_2.html
+++ b/case_study_2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASA Casestudy</title>
+    <title>Melissa Vaezi ASA Case-study</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./styles/main.css" media="all" />
     <link rel="stylesheet" type="text/css" href="./styles/header_footer.css" media="all" />
@@ -240,8 +240,14 @@
                         of the site, such as the mandate of the ASA, which could showcase their various roles and responsibilities visually.</p>
                 </div>
             </div>
+            <div class="spacer"></div>
+
+            <p class=centered>Go to the next <a href="case_study_3.html">case-study ></a></p>
+            <div class="spacer"></div>
         </main>
-        <div class="spacer1"></div>
+    </div>
+    </main>
+
     </div>
 
     <footer>
