--- a/case_study_3.html
+++ b/case_study_3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melissa Vaezi Homepage</title>
+    <title>Melissa Vaezi SparkyBuddy Case-study</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./styles/main.css" media="all" />
     <link rel="stylesheet" type="text/css" href="./styles/header_footer.css" media="all" />
@@ -197,9 +197,15 @@
                     the issue of monetization. Our user interviews suggested that sole traders doing domestic work would be reluctant to pay for a product unless it radically improved their work experience, and even then wouldn’t be willing to pay much.
                     We hoped that the simplicity of the design would make the product relatively easy to implement and therefore, financially viable, but that remains to be seen.</p>
             </div>
+            <div class="spacer"></div>
 
+            <p class=centered>Go to the next <a href="case_study_1.html">case-study ></a></p>
+            <div class="spacer"></div>
         </main>
-        <div class="spacer1"></div>
+    </div>
+
+    </main>
+
     </div>
 
     <footer>
