--- a/case_study_1.html
+++ b/case_study_1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Melissa Vaezi Homepage</title>
+    <title>Melissa Vaezi TFL Casestudy</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./styles/main.css" media="all" />
     <link rel="stylesheet" type="text/css" href="./styles/header_footer.css" media="all" />
@@ -280,9 +280,15 @@
                     by stakeholder e.g. new shop and add a contact form (as based on competitor analysis). This project really helped us learn to read every page of the existing website to fully understand their product before attempting to reimagine
                     it. To broaden the user research and to iterate accordingly</p>
             </div>
+            <div class="spacer"></div>
 
+            <p class=centered>Go to the next <a href="case_study_2.html">case-study ></a></p>
+            <div class="spacer"></div>
         </main>
-        <div class="spacer1"></div>
+    </div>
+
+    </main>
+
     </div>
 
     <footer>
