added links for prototypes in case study 1 and 3

--- a/case_study_1.html
+++ b/case_study_1.html
@@ -282,6 +282,9 @@
             </div>
             <div class="spacer"></div>
 
+            <p class=centered>View AdobeXD <a href="https://xd.adobe.com/view/3f4e8978-bbab-45b5-8c6a-64a171a3225b-6a1d/">prototype.</a></p>
+            <div class="spacer"></div>
+
             <p class=centered>Go to the next <a href="case_study_2.html">case-study ></a></p>
             <div class="spacer"></div>
         </main>
