--- a/case_study_3.html
+++ b/case_study_3.html
@@ -198,6 +198,8 @@
                     We hoped that the simplicity of the design would make the product relatively easy to implement and therefore, financially viable, but that remains to be seen.</p>
             </div>
             <div class="spacer"></div>
+            <p class=centered>View Figma <a href="https://www.figma.com/proto/RAMbcL8oghsTFcp4YA6o9i/SparkyBuddyPrototype_FinalPrototype?node-id=43%3A48&scaling=min-zoom">prototype.</a></p>
+            <div class="spacer"></div>
 
             <p class=centered>Go to the next <a href="case_study_1.html">case-study ></a></p>
             <div class="spacer"></div>
