added hoagies case study

--- a/case_study_3.html
+++ b/case_study_3.html
@@ -201,7 +201,7 @@
             <p class=centered>View Figma <a href="https://www.figma.com/proto/RAMbcL8oghsTFcp4YA6o9i/SparkyBuddyPrototype_FinalPrototype?node-id=43%3A48&scaling=min-zoom">prototype.</a></p>
             <div class="spacer"></div>
 
-            <p class=centered>Go to the next <a href="case_study_1.html">case-study ></a></p>
+            <p class=centered>Go to the next <a href="case_study_4.html" target="_blank">case-study ></a></p>
             <div class="spacer"></div>
         </main>
     </div>
