--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@
             </div>
         </div>
 
+        <div class="casestudy">
+            <img src="./images/hoagies/hoagies-display.png" alt="Hoagies Gifted Education Case Study">
+            <div class="overlay">
+                <h3>Responsive Redesign of a Website Group Project at the University of Adelaide. UX/UI/Front-end development</h3>
+                <a class="view-casestudy-button" href="./case_study_4.html">View Case-Study ></a>
+            </div>
+        </div>
+
     </main>
     <div class="spacer1"></div>
 
