--- a/case_study_1.html
+++ b/case_study_1.html
@@ -8,18 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./styles/main.css" media="all" />
     <link rel="stylesheet" type="text/css" href="./styles/header_footer.css" media="all" />
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQDKKWL2D2"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'G-EQDKKWL2D2');
-    </script>
 </head>
 
 <body>
@@ -282,7 +271,7 @@
             </div>
             <div class="spacer"></div>
 
-            <p class=centered>View AdobeXD <a href="https://xd.adobe.com/view/3f4e8978-bbab-45b5-8c6a-64a171a3225b-6a1d/">prototype.</a></p>
+            <p class=centered>View AdobeXD <a href="https://xd.adobe.com/view/3f4e8978-bbab-45b5-8c6a-64a171a3225b-6a1d/" target="_blank">prototype.</a></p>
             <div class="spacer"></div>
 
             <p class=centered>Go to the next <a href="case_study_2.html">case-study ></a></p>
