--- a/case_study_1.html
+++ b/case_study_1.html
@@ -288,7 +288,7 @@
             <div class="footer-button">
                 <p>melissa.vaezi@gmail.com</p>
             </div>
-            <a href="https://www.linkedin.com/in/melissa-vaezi/" class="footer-button">
+            <a href="https://www.linkedin.com/in/melissa-vaezi/" target="_blank" class="footer-button">
                 <p>LinkedIn</p>
             </a>
             <div class="footer-button">
