--- a/case_study_4.html
+++ b/case_study_4.html
@@ -42,7 +42,7 @@
         </div>
     </header>
 
-    <div class="#">
+    <div class="purple-bg">
         <main class="large-width centered-padded">
             <div class="spacer1"></div>
             <div class="row">
@@ -221,7 +221,7 @@
             <div class="footer-button">
                 <p>melissa.vaezi@gmail.com</p>
             </div>
-            <a href="https://www.linkedin.com/in/melissa-vaezi/" class="footer-button">
+            <a href="https://www.linkedin.com/in/melissa-vaezi/" target="_blank" class="footer-button">
                 <p>LinkedIn</p>
             </a>
             <div class="footer-button">
