--- a/case_study_4.html
+++ b/case_study_4.html
@@ -42,7 +42,7 @@
         </div>
     </header>
 
-    <div class="purple-bg">
+    <div class="white-bg">
         <main class="large-width centered-padded">
             <div class="spacer1"></div>
             <div class="row">
