--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     <a href="about.html" class="menuitem">
                         <h4>About Me</h4>
                     </a>
-                    <a href="Melissa Vaezi Resume.pdf" class="menuitem">
+                    <a href="Melissa Vaezi Resume.pdf" target="_blank" class="menuitem">
                         <h4>Resume</h4>
                     </a>
                     <a href="contact.html" class="menuitem">
@@ -232,7 +232,7 @@
             <div class="footer-button">
                 <p>melissa.vaezi@gmail.com</p>
             </div>
-            <a href="https://www.linkedin.com/in/melissa-vaezi/" class="footer-button">
+            <a href="https://www.linkedin.com/in/melissa-vaezi/" target="_blank" class="footer-button">
                 <p>LinkedIn</p>
             </a>
             <div class="footer-button">
