--- a/case_study_3.html
+++ b/case_study_3.html
@@ -43,7 +43,7 @@
                     <a href="about.html" class="menuitem">
                         <h4>About Me</h4>
                     </a>
-                    <a href="Melissa Vaezi Resume.pdf" class="menuitem">
+                    <a href="Melissa Vaezi Resume.pdf" target="_blank" class="menuitem">
                         <h4>Resume</h4>
                     </a>
                     <a href="contact.html" class="menuitem">
