--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             </div>
             <div class="biotext body1">
                 <p>
-                    Hi, I'm Melissa Vaezi, a Graduate UX/UI Designer. I am passionate about user research and testing because I believe these are fundamental to good user experience. I believe in seeking to understand the experience of all potential users and including them
-                    in the design process. Once there is solid UX process undertaken, beautiful and functional UI solutions can be built that meet the needs of all users. I'm excited to apply and build on the comprehensive skills I've gained in the UX/UI
-                    course I've just completed at the University of Adelaide.
+                    Hi, I'm Melissa Vaezi, a Graduate UX/UI Designer based in Adelaide. I am passionate about grounding all my designs in solid user research and testing to create great user experience. I believe in seeking to understand the experience of all potential users
+                    and including them in the design process. Once there is solid UX process undertaken, beautiful and functional UI solutions can be built that meet the needs of all users. I'm excited to apply and build on the comprehensive skills I've
+                    gained in the UX/UI course I've just completed at the University of Adelaide.
                 </P>
 
                 <p><strong>
