--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
             </div>
             <div class="biotext body1">
                 <p>
-                    Hi, I'm Melissa Vaezi, a Graduate UX/UI Designer based in Adelaide. I am passionate about grounding all my designs in solid user research and testing to create great user experience. I believe in seeking to understand the experience of all potential users
-                    and including them in the design process. Once there is solid UX process undertaken, beautiful and functional UI solutions can be built that meet the needs of all users. I'm excited to apply and build on the comprehensive skills I've
-                    gained in the UX/UI course I've just completed at the University of Adelaide.
+                    Hi, I'm Melissa Vaezi, a Graduate UX/UI Designer based in Adelaide. I am passionate about creating beautiful digital products that genuinely meet people's needs. Great user experiences rely on a combination of solid user research and testing, teamwork,
+                    communication and a willingness to respond to feedback. I'm here to be part of the team, to learn about the people using your products so that they want to come back for more.
                 </P>
 
                 <p><strong>
