--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </div>
             <div class="biotext body1">
                 <p>
-                    Hi, I'm Melissa Vaezi, a Graduate UX/UI Designer based in Adelaide. I am passionate about creating beautiful digital products that genuinely meet people's needs. Great user experiences rely on a combination of solid user research and testing, teamwork,
-                    communication and a willingness to respond to feedback. I'm here to be part of the team, to learn about the people using your products so that they want to come back for more.
+                    Hi, I'm Melissa Vaezi, a UX/UI Designer based in Adelaide. I am passionate about creating beautiful digital products that genuinely meet people's needs. Great user experiences rely on a combination of solid user research and testing, teamwork, communication
+                    and a willingness to respond to feedback. I'm here to be part of the team, to learn about the people using your products so that they want to come back for more.
                 </P>
 
                 <p><strong>
