new resume, updated description
yep

--- a/about.html
+++ b/about.html
@@ -121,10 +121,10 @@
                 <div class="styled-text centered-padded large-width body2 col-12">
                     <h2>UX Design Process</h2>
 
-                    <p>The UX/UI course I’ve just completed has been invaluable in providing both theoretical knowledge and a wealth practical experience in every stage of the design process. It has been an intense learning process and I know I still have
-                        a lot to learn about this field. In reflecting on some of the work my classmates and I have done during the course, I realised how important it is to never rush to come up with a solution without doing due diligence to the research
-                        phase. We have to keep an open mind and keep asking questions to uncover the real issues, otherwise the solutions we come up with may not really help people. In a redesign project, this could result in the best/most functional
-                        parts of the original product being lost and the real problems potentially remaining unsolved.
+                    <p>The UX/UI course I studied has been invaluable in providing both theoretical knowledge and a wealth practical experience in every stage of the design process. It has been an intense learning process and I know I still have a lot to
+                        learn about this field. In reflecting on some of the work my classmates and I have done during the course, I realised how important it is to never rush to come up with a solution without doing due diligence to the research phase.
+                        We have to keep an open mind and keep asking questions to uncover the real issues, otherwise the solutions we come up with may not really help people. In a redesign project, this could result in the best/most functional parts of
+                        the original product being lost and the real problems potentially remaining unsolved.
                     </p>
                 </div>
                 <div class="centered">
@@ -203,18 +203,16 @@
 
                         <p>I studied Arts and Education at the University of Western Australia. I majored in French for my Arts degree and spent a year working and studying in Paris. After graduating, I wasn’t ready to settle down yet and decided to spend
                             more time overseas. I volunteered for two years at the Baha’i World Centre in Israel working on organising correspondence. I worked with several complex customer software programmes, learned them well and soon led a team and
-                            mentored others in their use. These programmes had been in use for many years and were poorly designed. I participated in a project to re-design one and I liked the role I played as a subject matter expert - I even considered
-                            becoming a business analyst.
+                            mentored others in their use. These programmes had been in use for many years and were poorly designed. I participated in a project to re-design one and I liked the role I played as a Subject Matter Expert in the project -
+                            I even considered becoming a business analyst at that time.
                         </p>
 
                         <p>Later my husband and I moved to Sarajevo in Bosnia and Herzegovina where we volunteered in a community development project for children and youth for three years. After having our first child, we moved back to Australia, but moved
-                            several times within Australia and even had a stint in New Zealand. We had two more kids along the way and finally settled in Adelaide, where we’ve been for the past two years.</p>
+                            several times within Australia and even had a stint in New Zealand. We had two more kids along the way and finally settled in Adelaide, where we’ve been for the past three years.</p>
 
-                        <p>Naturally, I have been focusing on raising our three little ones, but in the last couple of years, as my youngest is getting to be a preschooler, I have been wondering about what career to pursue. My husband who is a software developer
-                            encouraged me to consider design, since he saw how passionate I was back in Israel to improve the software we worked on. He also knew my attention to detail and ability to think deeply and critically analyse things would come
-                            in handy in this profession. As I got into the course, it has really felt like a natural fit. I’ve enjoyed learning about the design process, about what makes a good user interface, about how to produce beautiful designs in
-                            Figma and Adobe XD and most recently how to bring my designs to fruition through coding. I wish I had known about this career back when I was leaving high school, but perhaps I needed all that life experience to get to where
-                            I am now.</p>
+                        <p>In 2020, I discovered the field of UX/UI and realised it was well-suited to my passion for improving digital experiences, my attention to detail and ability to think deeply, broadly and critically. Advancing in my studies, I enjoyed
+                            learning about the design process, about what makes a good user interface, how to produce frictionless and accessible designs, how to use Figma and Adobe XD and most recently how to bring my designs to fruition through coding.</p>
+                        <p>In 2022, I landed my first UX/UI role. It's been enjoyable being in a work environment, collaborating with people in various specialist domains and doing my best to bring value to clients.</p>
                     </div>
 
                     <div class="col-12 col-md-4">
