--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
             </div>
             <div class="biotext body1">
                 <p>
-                    Hi, I'm Melissa Vaezi, a UX/UI Designer based in Adelaide. I am passionate about creating beautiful digital products that genuinely meet people's needs. Great user experiences rely on a combination of solid user research and testing, teamwork, communication
-                    and a willingness to respond to feedback. I'm here to be part of the team, to learn about the people using your products so that they want to come back for more.
+                    Hi, I'm Melissa, a UX/UI Designer based in Adelaide with passion for intuitive, people-centered digital products. I am able to conduct the entire UX/UI process, right up to creating high fidelity designs. Recent experience in a graduate role creating
+                    designs that delivered AI solutions for several major companies. Seeking a role with a company that considers the ethical impact of their products on the whole world, values inclusivity, prioritizes usability testing and is focused
+                    on innovative project management.
                 </P>
 
                 <p><strong>
