--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <div class="biotext body1">
                 <p>
                     Hi, I'm Melissa, a UX/UI Designer based in Adelaide with passion for intuitive, people-centered digital products. I am able to conduct the entire UX/UI process, right up to creating high fidelity designs. Recent experience in a graduate role creating
-                    designs that delivered AI solutions for several major companies. Seeking a role with a company that considers the ethical impact of their products on the whole world, values inclusivity, prioritizes usability testing and is focused
-                    on innovative project management.
+                    designs that delivered AI solutions for several major companies. Seeking a role with a company that considers the ethical impact of their products, values inclusivity, prioritizes usability testing and is focused on innovative project
+                    management.
                 </P>
 
                 <p><strong>
